<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline"> Home</string>
    <string name="user_name_label">UserName</string>
    <string name="tweet_body_label">Body</string>
    <string name="screen_name_label">ScreenName</string>
    <string name="relative_time_label">0s</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_compose">Compose</string>
    <string name="compose_fragment_name">Basic Twitter</string>
    <string name="my_screen_name_label">MyScreenName</string>
    <string name="my_name_label">MyName</string>
    <string name="btn_tweet"> Tweet </string>

</resources>